modification de login

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <title>Connexion - Mini Site Étudiant</title>
   </head>
   <body>
-    <h2>Connexion</h2>
+    <h2>Connexion nouveaux</h2>
 
     {% if message %}
     <p style="color: red">{{ message }}</p>
